refactor: improve reactor metadata retrieval and response handling in ReactorResource